# VMR

./: .env  .gitignore  HOMEPAGE_UPDATE.md  README.md  pyproject.toml  requirements.txt  run.sh  start.sh  start_reports.sh  streamlit_app.py
.specify/memory/: constitution.md
backend/: __init__.py
backend/src/: __init__.py  config.py  main.py  schemas.py
backend/src/api/: jobs.py  pages.py
backend/src/services/: ffmpeg.py  processor.py  storage.py
backend/src/templates/: jobs_list.html
backend/src/utils/: file_utils.py
backend/tests/contract/: __init__.py  test_create_job_dual.py  test_create_job_single.py  test_get_job.py  test_list_jobs.py
docker/: Dockerfile  deploy.sh
pages/: 2_📈_Report_Details.py  3_📉_Metrics_Comparison.py
specs/001-video-quality-metrics-report/: encoding-templates.md  spec.md
specs/001-video-quality-metrics-report/checklists/: requirements.md
src/: Homepage.py  __init__.py  config.py  main.py  models.py  models_template.py  reports_app.py  schemas.py  schemas_metrics_analysis.py  schemas_template.py
src/api/: __init__.py  jobs.py  metrics_analysis.py  pages.py  templates.py
src/pages/: Metrics_Analysis.py  Metrics_Comparison.py  Stream_Analysis.py  bitstream_report.py  metrics_comparison.py  report_details.py  template_metrics.py
src/services/: __init__.py  bitstream_analysis.py  ffmpeg.py  metrics_analysis_runner.py  metrics_parser.py  processor.py  report_scanner.py  storage.py  template_encoder.py  template_runner.py  template_storage.py
src/static/js/: common.js
src/templates/: base.html  bitstream_analysis.html  create_job.html  index.html  job_report.html  jobs_list.html  template_compare.html  template_detail.html  template_form.html  templates_list.html
src/utils/: __init__.py  bd_rate.py  datetime_utils.py  encoding.py  file_utils.py  metrics.py  path_helpers.py  streamlit_helpers.py  template_helpers.py  url_helpers.py
tests/contract/: test_create_job_dual.py  test_create_job_single.py  test_get_job.py  test_list_jobs.py
