[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=backend/src",
    "--cov-report=html:coverage_html_report",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "contract: Contract tests for API endpoints",
    "integration: Integration tests for end-to-end flows",
    "unit: Unit tests for individual components",
    "US1: User Story 1 tests",
    "US2: User Story 2 tests",
    "US3: User Story 3 tests",
    "US4: User Story 4 tests",
]

[tool.coverage.run]
source = ["backend/src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 80
precision = 2
show_missing = true
skip_covered = false

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["nanoid.*"]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vqmr"
version = "0.1.0"
description = "Video Quality Metrics Report - Web application for video encoding quality analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "VQMR Team"}
]
keywords = ["video", "quality", "metrics", "ffmpeg", "psnr", "vmaf", "ssim"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/your-org/VQMR"
Documentation = "https://docs.vqmr.example.com"
Repository = "https://github.com/your-org/VQMR"
